# ROS-projects

./: .gitignore  .gitmodules
Relatorios_latex/: Relatorio2.aux  Relatorio2.dvi  Relatorio2.out  Relatorio2.tex  Relatorio3.aux  Relatorio3.out  Relatorio3.tex
fcr2017/: CIC_graph.txt  CMakeLists.txt  Probability.txt  README.md  README.txt  cic_features.txt  package.xml
fcr2017/include/: common.h  feature.h  graph.h  laser_sensor.h  localization.h  motion_controller.h  odometer.h  user_motion_controller.h
fcr2017/launch/: map_saver.launch  roteiro5.launch  roteiro5.rviz  trabalho1.launch  trabalho1.rviz  trabalho2.launch  trabalho2.rviz  trabalho3.launch
fcr2017/mapas/: cic.pgm  cic.yaml
fcr2017/scripts/: controller.py  live_plot.py
fcr2017/src/: 140021671_Trabalho2.cpp  140021671_direta.cpp  140021671_inversa.cpp  140021671_roteiro4.cpp  140021671_roteiro5.cpp  140021671_roteiro6.cpp  140021671_roteiro7.cpp  140021671_trabalho3.cpp
fcr2017/src/Previous code/: 140021671_Trabalho1.cpp  140021671_Trabalho2.cpp  140021671_localizacao.cpp  140021671_roteiro4.cpp  140021671_roteiro5.cpp  grid_map.cpp  grid_map.h  odometer.cpp
fcr2017/src/Roteiro1/: 140021671_direta.cpp  140021671_inversa.cpp
fcr2017/src/Roteiro2/: 140021671_sensor.cpp
fcr2017/src/Roteiro3/: 140021671_localizacao.cpp
fcr2017/src/Trabalho1/: 140021671_Trabalho1.cpp
fcr2017/src/common_lib/: common.cpp  common.h  feature.cpp  graph.cpp  graph.h  grid_map.cpp  grid_map.h  laser_sensor.cpp  laser_sensor.h  localization.cpp  motion_controller.cpp  motion_controller.h  odometer.cpp  odometer.h  odometry.cpp  odometry.h  user_motion_controller.cpp
fcr2017/worlds/: Trabalho1.world  cic_fast.world  my_cic.world
fcr2017/worlds/cic/: cic.world
